[gd_scene load_steps=16 format=3 uid="uid://b5qdqaaw2hat6"]

[ext_resource type="Script" path="res://player/scripts/player_controller.gd" id="1_kt7rl"]
[ext_resource type="Script" path="res://player/scripts/player_movement.gd" id="2_02ofg"]
[ext_resource type="SpriteFrames" uid="uid://dlj10bsjifa2w" path="res://player/resources/player_animations.tres" id="2_mc37b"]
[ext_resource type="Resource" uid="uid://cjeut3m67l1iw" path="res://player/resources/player_movement_data.tres" id="3_pti2n"]
[ext_resource type="Script" path="res://player/animations/player_animation_controller.gd" id="3_rkoyo"]
[ext_resource type="Script" path="res://player/scripts/player_attack.gd" id="7_bi60k"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="9_2qwus"]
[ext_resource type="Script" path="res://addons/godot_state_charts/parallel_state.gd" id="9_uli4m"]
[ext_resource type="Resource" uid="uid://dchkf655ulbpo" path="res://player/resources/player_attack_data.tres" id="10_j7iwd"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="10_pcuc3"]
[ext_resource type="Script" path="res://hit_box.gd" id="10_urtlw"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="11_2qsfj"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="11_6k34h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_20xhv"]
size = Vector2(20, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qtmv3"]
size = Vector2(47, 20)

[node name="Player" type="CharacterBody2D" groups=["player"]]
top_level = true
collision_mask = 4

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_mc37b")
animation = &"idle"

[node name="CharacterBodyShape" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_20xhv")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="PlayerController" type="Node" parent="." node_paths=PackedStringArray("movement_component", "attack_component", "state_chart")]
script = ExtResource("1_kt7rl")
movement_component = NodePath("../PlayerMovement")
attack_component = NodePath("../PlayerAttack")
state_chart = NodePath("../StateChart")

[node name="PlayerAnimationController" type="Node" parent="." node_paths=PackedStringArray("state_chart", "animated_sprite")]
script = ExtResource("3_rkoyo")
state_chart = NodePath("../StateChart")
animated_sprite = NodePath("../AnimatedSprite2D")

[node name="PlayerMovement" type="Node" parent="." node_paths=PackedStringArray("character_body")]
script = ExtResource("2_02ofg")
movement_data = ExtResource("3_pti2n")
character_body = NodePath("..")

[node name="PlayerAttack" type="Node2D" parent="." node_paths=PackedStringArray("movement_component")]
script = ExtResource("7_bi60k")
attack_data = ExtResource("10_j7iwd")
movement_component = NodePath("../PlayerMovement")

[node name="HitBox" type="Area2D" parent="PlayerAttack"]
script = ExtResource("10_urtlw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerAttack/HitBox"]
position = Vector2(20.5, -11)
shape = SubResource("RectangleShape2D_qtmv3")
debug_color = Color(0.988235, 0, 0, 0.419608)

[node name="StateChart" type="Node" parent="."]
script = ExtResource("9_2qwus")
track_in_editor = true

[node name="ParallelState" type="Node" parent="StateChart"]
script = ExtResource("9_uli4m")

[node name="LogicStates" type="Node" parent="StateChart/ParallelState"]
editor_description = "Эти состояния используются для внутренней логики игрока, то есть, они тесно связаны с самими механиками.

Для анимаций используется отдельная ветка."
script = ExtResource("9_uli4m")

[node name="MovingStates" type="Node" parent="StateChart/ParallelState/LogicStates"]
editor_description = "Здесь состояния движения по горизонтали."
script = ExtResource("10_pcuc3")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateChart/ParallelState/LogicStates/MovingStates"]
script = ExtResource("11_2qsfj")

[node name="OnStartMoving" type="Node" parent="StateChart/ParallelState/LogicStates/MovingStates/Idle"]
script = ExtResource("11_6k34h")
to = NodePath("../../Moving")
event = &"start_moving"

[node name="Moving" type="Node" parent="StateChart/ParallelState/LogicStates/MovingStates"]
script = ExtResource("11_2qsfj")

[node name="OnStopMoving" type="Node" parent="StateChart/ParallelState/LogicStates/MovingStates/Moving"]
script = ExtResource("11_6k34h")
to = NodePath("../../Idle")
event = &"stop_moving"

[node name="Jump&FallStates" type="Node" parent="StateChart/ParallelState/LogicStates"]
editor_description = "Здесь состояния движения по вертикали."
script = ExtResource("10_pcuc3")
initial_state = NodePath("InAir")

[node name="InAir" type="Node" parent="StateChart/ParallelState/LogicStates/Jump&FallStates"]
script = ExtResource("11_2qsfj")

[node name="OnLand" type="Node" parent="StateChart/ParallelState/LogicStates/Jump&FallStates/InAir"]
script = ExtResource("11_6k34h")
to = NodePath("../../CanJump/Grounded")
event = &"land"

[node name="OnWallCollision" type="Node" parent="StateChart/ParallelState/LogicStates/Jump&FallStates/InAir"]
editor_description = "Игрок начал скользить по стене."
script = ExtResource("11_6k34h")
to = NodePath("../../CanJump/OnWall")
event = &"wall_collision"

[node name="CanJump" type="Node" parent="StateChart/ParallelState/LogicStates/Jump&FallStates"]
editor_description = "Во всей этой ветке состояний можно осуществить прыжок."
script = ExtResource("10_pcuc3")
initial_state = NodePath("Grounded")

[node name="OnJump" type="Node" parent="StateChart/ParallelState/LogicStates/Jump&FallStates/CanJump"]
script = ExtResource("11_6k34h")
to = NodePath("../../InAir")
event = &"jump"

[node name="OnFall" type="Node" parent="StateChart/ParallelState/LogicStates/Jump&FallStates/CanJump"]
script = ExtResource("11_6k34h")
to = NodePath("../../InAir")
event = &"fall"

[node name="Grounded" type="Node" parent="StateChart/ParallelState/LogicStates/Jump&FallStates/CanJump"]
script = ExtResource("11_2qsfj")

[node name="OnWall" type="Node" parent="StateChart/ParallelState/LogicStates/Jump&FallStates/CanJump"]
editor_description = "Игрок скользит по стене."
script = ExtResource("11_2qsfj")

[node name="OnLand" type="Node" parent="StateChart/ParallelState/LogicStates/Jump&FallStates/CanJump/OnWall"]
script = ExtResource("11_6k34h")
to = NodePath("../../Grounded")
event = &"land"

[node name="AnimationStates" type="Node" parent="StateChart/ParallelState"]
editor_description = "Эта ветка состояний отвечает только за анимации и не связана с логикой механик игрока.

Суть в том, что анимации не всегда совпадают с логическими состояниями, например, с точки зрения логики нахождение в воздухе является единым состоянием, а для анимаций различается сам прыжок и падение."
script = ExtResource("10_pcuc3")
initial_state = NodePath("MovingAnimations")

[node name="MovingAnimations" type="Node" parent="StateChart/ParallelState/AnimationStates"]
editor_description = "Анимации, связанные с движением игрока по горизонтали."
script = ExtResource("10_pcuc3")
initial_state = NodePath("IdleAnimation")

[node name="OnJump" type="Node" parent="StateChart/ParallelState/AnimationStates/MovingAnimations"]
script = ExtResource("11_6k34h")
to = NodePath("../../AirborneAnimations/Jump")
event = &"jump"

[node name="OnFall" type="Node" parent="StateChart/ParallelState/AnimationStates/MovingAnimations"]
script = ExtResource("11_6k34h")
to = NodePath("../../AirborneAnimations/Falling")
event = &"fall"

[node name="IdleAnimation" type="Node" parent="StateChart/ParallelState/AnimationStates/MovingAnimations"]
script = ExtResource("11_2qsfj")

[node name="OnStartMoving" type="Node" parent="StateChart/ParallelState/AnimationStates/MovingAnimations/IdleAnimation"]
script = ExtResource("11_6k34h")
to = NodePath("../../MovingAnimation")
event = &"start_moving"

[node name="MovingAnimation" type="Node" parent="StateChart/ParallelState/AnimationStates/MovingAnimations"]
script = ExtResource("11_2qsfj")

[node name="OnStopMoving" type="Node" parent="StateChart/ParallelState/AnimationStates/MovingAnimations/MovingAnimation"]
script = ExtResource("11_6k34h")
to = NodePath("../../IdleAnimation")
event = &"stop_moving"

[node name="AirborneAnimations" type="Node" parent="StateChart/ParallelState/AnimationStates"]
editor_description = "Эта ветка отвечает за анимации при движении игрока по вертикали (прыжок, падение, скольжение по стенам)."
script = ExtResource("10_pcuc3")
initial_state = NodePath("Falling")

[node name="OnLand" type="Node" parent="StateChart/ParallelState/AnimationStates/AirborneAnimations"]
script = ExtResource("11_6k34h")
to = NodePath("../../MovingAnimations/IdleAnimation")
event = &"land"

[node name="Jump" type="Node" parent="StateChart/ParallelState/AnimationStates/AirborneAnimations"]
script = ExtResource("11_2qsfj")

[node name="OnFall" type="Node" parent="StateChart/ParallelState/AnimationStates/AirborneAnimations/Jump"]
script = ExtResource("11_6k34h")
to = NodePath("../../Falling")
event = &"fall"

[node name="OnWallCollision" type="Node" parent="StateChart/ParallelState/AnimationStates/AirborneAnimations/Jump"]
script = ExtResource("11_6k34h")
to = NodePath("../../OnWall")
event = &"wall_collision"

[node name="Falling" type="Node" parent="StateChart/ParallelState/AnimationStates/AirborneAnimations"]
script = ExtResource("11_2qsfj")

[node name="OnWallCollision" type="Node" parent="StateChart/ParallelState/AnimationStates/AirborneAnimations/Falling"]
script = ExtResource("11_6k34h")
to = NodePath("../../OnWall")
event = &"wall_collision"

[node name="OnWall" type="Node" parent="StateChart/ParallelState/AnimationStates/AirborneAnimations"]
script = ExtResource("11_2qsfj")

[node name="OnJump" type="Node" parent="StateChart/ParallelState/AnimationStates/AirborneAnimations/OnWall"]
script = ExtResource("11_6k34h")
to = NodePath("../../Jump")
event = &"jump"

[connection signal="state_physics_processing" from="StateChart/ParallelState/LogicStates/MovingStates" to="PlayerController" method="_on_moving_states_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/ParallelState/LogicStates/Jump&FallStates" to="PlayerController" method="_on_jump_fall_states_state_physics_processing"]
[connection signal="state_unhandled_input" from="StateChart/ParallelState/LogicStates/Jump&FallStates/CanJump" to="PlayerController" method="_on_can_jump_state_unhandled_input"]
[connection signal="state_entered" from="StateChart/ParallelState/AnimationStates/MovingAnimations/IdleAnimation" to="PlayerAnimationController" method="_on_idle_animation_state_entered"]
[connection signal="state_entered" from="StateChart/ParallelState/AnimationStates/MovingAnimations/MovingAnimation" to="PlayerAnimationController" method="_on_moving_animation_state_entered"]
[connection signal="state_entered" from="StateChart/ParallelState/AnimationStates/AirborneAnimations/Jump" to="PlayerAnimationController" method="_on_jump_state_entered"]
[connection signal="state_entered" from="StateChart/ParallelState/AnimationStates/AirborneAnimations/Falling" to="PlayerAnimationController" method="_on_falling_state_entered"]
[connection signal="state_entered" from="StateChart/ParallelState/AnimationStates/AirborneAnimations/OnWall" to="PlayerAnimationController" method="_on_on_wall_state_entered"]
